# persistent-data-structures

./: Makefile  Makefile.example.local  Makefile.local  README.md  pyproject.toml
.github/workflows/: build.yml
src/persistent_data_structures/: persistent_queue.py  persistent_stack.py
tests/: test_persistent_queue.py  test_persistent_stack.py
