[project]
name = "persistent-data-structures"
version = "0.1.0"
description = "Persistent Data Structures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "pip-audit>=2.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[tool.isort]
profile = "black"
multi_line_output = 3
